<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eddiebot_description</name>
  <version>0.0.0</version>
  <description>The eddiebot_description provides a complete 3D model of the EddieBot for simulation and visualization.</description>
  <maintainer email="arashsm79@yahoo.com">arashsm79</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>irobot_create_description</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
