<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eddiebot_gazebo</name>
  <version>0.0.0</version>
  <description>eddiebot gazebo configurations and models</description>
  <maintainer email="arashsm79@yahoo.com">arashsm79</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>irobot_create_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>eddiebot_description</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
