<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eddiebot_nav</name>
  <version>0.0.0</version>
  <description>eddiebot rviz configurations</description>
  <maintainer email="arashsm79@yahoo.com">arashsm79</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
